Test/senamic_test/zzm_test/test8.output
Error type 10 at Line 7: Variable is not an array "["
