Test/senamic_test/zzm_test/test8.cmm
int func();


int main(int i, float j){
    if (func() == 1)
        i = 3;
    func[1];    //  10

    return 1;
}

int func(){
    return 1;
}
